# videosmart-ai

./: LICENSE  README.md  docker-compose.yml
client/: .gitignore  Dockerfile  package-lock.json  package.json
client/src/: App.css  App.jsx  index.css
client/src/components/: Auth.jsx  ChatPanel.jsx  Dashboard.jsx  VideoDetail.jsx
client/src/utils/: api.js  markdown.jsx
server/: .gitignore  Dockerfile  main.py  pyproject.toml
server/app/: main.py
server/app/api/: __init__.py  auth.py  chat.py  upload_video.py  videos.py
server/app/core/: config.py  extractor.py  rag_engine.py  security.py  summarizer.py  transcriber.py  transcriber_sarvam.py  vector_store.py
server/app/db/: mongodb.py
server/app/schemas/: auth.py  chat.py  video.py
server/app/services/: __init__.py  auth_login.py  auth_profile.py  chat_history.py  chat_query.py  video_query.py  video_upload.py
server/app/utils/: audio_downloader.py  audio_processor.py  cloudinary_helper.py  pipeline.py  pipeline_steps.py
server/scratch/: test_api.py
