[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "audioop-lts>=0.2.2",
    "bcrypt>=5.0.0",
    "cloudinary>=1.44.2",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langchain-mongodb>=0.11.0",
    "motor>=3.7.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pydub>=0.25.1",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "static-ffmpeg>=3.0",
    "uvicorn>=0.49.0",
    "yt-dlp>=2026.6.9",
]
